<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/layout_conversion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".activity.ConversionCounterActivity" >

        <TextView
            android:id="@+id/title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="Thank you. Lets get started!"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <com.facebook.widget.ProfilePictureView
            android:id="@+id/selection_profile_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_textview"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            app:preset_size="small" />

        <TextView
            android:id="@+id/number_of_people_converted_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/default_count_down"
            android:textSize="40sp" />

        <Button
            android:id="@+id/registerAConversionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/goal_msg_textview"
            android:layout_alignRight="@+id/goal_msg_textview"
            android:layout_below="@+id/number_of_people_converted_textview"
            android:text="@string/register_a_conversion" />

        <TextView
            android:id="@+id/gear_up_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/selection_profile_pic"
            android:layout_toRightOf="@+id/selection_profile_pic"
            android:text="@string/gear_up_msg"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/goal_msg_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/title_textview"
            android:layout_below="@+id/selection_profile_pic"
            android:layout_marginTop="28dp"
            android:text="@string/target_details"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_get_started"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/margin_medium"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_large"
            android:text="@string/get_started_msg"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/login_with_facebook_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/com_facebook_button_blue"
            android:drawableLeft="@drawable/com_facebook_inverse_icon"
            android:drawablePadding="@dimen/margin_medium"
            android:paddingLeft="@dimen/margin_medium"
            android:paddingRight="@dimen/margin_medium"
            android:text="@string/com_facebook_loginview_log_in_button"
            android:textColor="@android:color/white" />
    </LinearLayout>

</FrameLayout>